fix: too much bottom margin

--- a/style.css
+++ b/style.css
@@ -76,6 +76,6 @@ a {
         margin: -3em 1em 0 auto;
     }
     .apply {
-        margin-top: -3.5em;
+        margin-top: -3em;
     }
 }
